--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,27 @@ body {
 a {
   color: #00B7FF;
 }
+
+header {
+   text-align: center;
+   background-color: green;
+   color: white;
+}
+
+main {
+  padding: 10px;
+  background-color: lightcoral;
+  color: green;
+
+}
+
+section.container {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+section.container > section {
+  background-color: blue;
+  color: white;
+  padding: 5px;
+}
